# PhasMenu

./: CMakeLists.txt  PhasMenu.lnk  PhasMenu.sln.lnk  README.md
cmake/: imgui.cmake  pugixml.cmake
src/: common.hpp  main.cpp  thread_pool.cpp  thread_pool.hpp
src/appdata/: il2cpp-api-functions-ptr.h  il2cpp-types-ptr.h
src/core/: menu_enums.hpp  settings.cpp  settings.hpp
src/core/file_manager/: file_manager.cpp  file_manager.hpp
src/features/: all.hpp  feature_manager.cpp  feature_manager.hpp
src/features/core/: execute_feature.hpp  feature.cpp  feature.hpp  toggle_feature.hpp
src/features/debug/: rpc_viewer.hpp
src/features/ghost/: ghost_info_window.hpp
src/game/: MethodInfo.hpp  MonoBehavior.h  PlayerStamina.h  camera.hpp  component.hpp  cursor.h  cursor.hpp  evidence.hpp  evidence_controller.hpp  exit_level.hpp  first_person_controller.hpp  fuse_box.hpp  game_object.hpp  ghost_activity.hpp  ghost_ai.hpp  ghost_evidence.hpp  ghost_info.hpp  ghost_traits.hpp  il2cpptemp.hpp  key.hpp  level_controller.hpp  level_room.hpp  matrix.hpp  mono_behaviour.hpp  mouse_look.hpp  network.hpp  object.hpp  photon_object_interact.hpp  photon_view.hpp  physics_character_controller.hpp  player.hpp  player_sanity.hpp  player_stamina.hpp  player_stats.hpp  quaternion.hpp  raycast_hit.hpp  rigidbody.hpp  sdk.hpp  string.hpp  transform.hpp  (+3 more)
src/memory/: pattern_batch.cpp  pointers.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/util/: feature.hpp  game_util.hpp  gui_util.hpp  notify.hpp
src/widgets/: fa_solid_900.h  font_awesome_5.h  imgui_notify.h  stb_image.h
(+44 files in other folders)
